chore: update translations with Fink 🐦

--- a/src/lib/i18n/locales/fr-fr.json
+++ b/src/lib/i18n/locales/fr-fr.json
@@ -1,7 +1,7 @@
 {
   "reposted_by": "Reposté par {name}",
   "reply_to": "Réponse à {name}",
-  "delete_post": "Supprimé le message",
+  "delete_post": "Supprimer le message",
   "quote_post": "Citer le message",
   "show_thread": "Montrer thread",
   "translation": "Traduire",
